Add --with-native-includes configure option. Moved include files shared with kernel to sys/bsm.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 146881]

--- a/config/config.h.in
+++ b/config/config.h.in
@@ -177,6 +177,9 @@
 /* Define if uses Mach IPC for Triggers messages */
 #undef USE_MACH_IPC
 
+/* Define to use native include files */
+#undef USE_NATIVE_INCLUDES
+
 /* Version number of package */
 #undef VERSION
 
